--- a/src/components/Comments/Comments.css
+++ b/src/components/Comments/Comments.css
@@ -6,11 +6,14 @@
 
 .comments1 {
   align-items: center;
-  /* position: relative; /* or absolute */
-  /* top: 100%;
-  left: 30%; */ */
+  margin: auto;
+  padding-left: 40px;
 }
 
 .author {
-    background-color: rgb(152, 170, 245);
+  background-color: rgb(152, 170, 245);
+}
+
+.comment-Footer {
+  padding: 10px;
 }
