--- a/src/components/Articles/Topics.css
+++ b/src/components/Articles/Topics.css
@@ -12,3 +12,10 @@
   border: solid black 2px;
   margin-bottom: 30px;
 }
+
+h1 {
+  background-color: rgb(16, 94, 182);
+  font-weight: 400;
+  color: white;
+  text-align: center;
+}
