--- a/src/components/Nav-bar.css
+++ b/src/components/Nav-bar.css
@@ -1,9 +1,11 @@
 .nav-bar {
-  background-color: rgb(140, 174, 248);
+  background-color: rgb(135, 167, 237);
   display: flex;
   flex-direction: row;
   justify-content: space-around;
 }
 .nav_bar_item {
   color: black;
+  font-size: 25px;
+  padding: 20px;
 }
