--- a/src/components/Articles/Topics.css
+++ b/src/components/Articles/Topics.css
@@ -4,8 +4,8 @@
   justify-content: space-evenly;
   flex-wrap: wrap;
   background-color: beige;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 .each-article {
@@ -15,7 +15,9 @@
 
 h1 {
   background-color: rgb(16, 94, 182);
-  font-weight: 400;
+  font-weight: 300;
   color: white;
   text-align: center;
+  margin: 0;
+  padding: 20px;
 }
