--- a/src/components/Nav-bar.css
+++ b/src/components/Nav-bar.css
@@ -1,11 +1,29 @@
+.navbar {
+  background-color: rgb(120, 120, 251);
+  color: antiquewhite;
+  font-size: 30px;
+}
+.navbar-NC {
+  font-size: 30px;
+}
 .nav-bar {
-  background-color: rgb(135, 167, 237);
+  background-color: rgb(11, 11, 52);
   display: flex;
   flex-direction: row;
   justify-content: space-around;
 }
 .nav_bar_item {
-  color: black;
+  color: rgb(124, 114, 236);
   font-size: 25px;
   padding: 20px;
+  border: solid white 1px;
+  border-radius: 1.2em;
+  padding: 20px;
+  margin: 15px;
+  transition: color 1s ease, background-color 1s ease;
+}
+
+.nav_bar_item:hover {
+  color: rgb(238, 237, 240);
+  background-color: rgb(20, 118, 187);
 }
